Combine and sort selections. Store model metric in a dataframe, write results to CSV, and plot confusion matrix.

--- a/figure3_table3.ipynb
+++ b/figure3_table3.ipynb
@@ -22,7 +22,7 @@
     "# Where to save files and figures. Set to None to prevent output\n",
     "import pymms\n",
     "outdir = pymms.config['gls_root'] + '/gls_paper'\n",
-    "fig_type = 'png' # png, jpg, svg, eps, ..."
+    "fig_type = 'svg' # png, jpg, svg, eps, ..."
    ]
   },
   {
@@ -114,9 +114,9 @@
    "source": [
     "# 'sitl+back' option includes selections submitted to the back structure\n",
     "# 'mp-dl-unh' is the name of the GLS model\n",
-    "sitl_data = sel.selections('sitl+back', t0, t1)\n",
-    "abs_data = sel.selections('abs', t0, t1)\n",
-    "gls_data = sel.selections('mp-dl-unh', t0, t1)\n",
+    "sitl_data = sel.selections('sitl+back', t0, t1, combine=True, sort=True)\n",
+    "abs_data = sel.selections('abs', t0, t1, combine=True, sort=True)\n",
+    "gls_data = sel.selections('mp-dl-unh', t0, t1, combine=True, sort=True)\n",
     "\n",
     "print('|------------------------------------------------------------------------')\n",
     "print('| Selections made on orbit {0} between {1} and {2}'.format(orbit, t0, t1))\n",
@@ -220,9 +220,9 @@
    "source": [
     "# 'sitl+back' option includes selections submitted to the back structure\n",
     "# 'mp-dl-unh' is the name of the GLS model\n",
-    "sitl_data = sel.selections('sitl+back', t0, t1)\n",
-    "abs_data = sel.selections('abs', t0, t1)\n",
-    "gls_data = sel.selections('mp-dl-unh', t0, t1)\n",
+    "sitl_data = sel.selections('sitl+back', t0, t1, combine=True, sort=True)\n",
+    "abs_data = sel.selections('abs', t0, t1, combine=True, sort=True)\n",
+    "gls_data = sel.selections('mp-dl-unh', t0, t1, combine=True, sort=True)\n",
     "\n",
     "print('|------------------------------------------------------------------------')\n",
     "print('| Selections made on orbit {0} between {1} and {2}'.format(orbit, t0, t1))\n",
@@ -324,9 +324,9 @@
    "source": [
     "# 'sitl+back' option includes selections submitted to the back structure\n",
     "# 'mp-dl-unh' is the name of the GLS model\n",
-    "sitl_data = sel.selections('sitl+back', t0, t1)\n",
-    "abs_data = sel.selections('abs', t0, t1)\n",
-    "gls_data = sel.selections('mp-dl-unh', t0, t1)\n",
+    "sitl_data = sel.selections('sitl+back', t0, t1, combine=True, sort=True)\n",
+    "abs_data = sel.selections('abs', t0, t1, combine=True, sort=True)\n",
+    "gls_data = sel.selections('mp-dl-unh', t0, t1, combine=True, sort=True)\n",
     "\n",
     "print('|------------------------------------------------------------------------')\n",
     "print('| Selections made on orbit {0} between {1} and {2}'.format(orbit, t0, t1))\n",
