--- a/figure4.ipynb
+++ b/figure4.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MMS SITL Ground Loop: Figure 4\n",
+    "# MMS SITL Ground Loop: Model Performance Measures\n",
     "This notebook reproduces Figure 4 of Argall, Small, et al. 2020.\n",
     "\n",
     "**CONTENTS**\n",
@@ -14,13 +14,8 @@
     "* [Burst Selections](#selections)\n",
     "* [Histogram Overlap](#histogram)\n",
     "* [Venn Diagram](#venn_diagram)\n",
-    "* [Confusion Matrix, Precision, Recall, F1 Score](#f1_score)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "* [Confusion Matrix, Precision, Recall, F1 Score](#f1_score)\n",
+    "\n",
     "<a id='front_matter'></a>\n",
     "## Front matter"
    ]
@@ -58,8 +53,8 @@
    "outputs": [],
    "source": [
     "sroi = 1\n",
-    "outdir = pymms.config['gls_root'] + '/gls_paper'\n",
-    "fig_type = 'svg' # png, jpg, svg, eps, ...\n",
+    "outdir = pymms.config['gls_root'] + '/gls_paper' # Set to None to suppress output\n",
+    "fig_type = 'pdf' # eps, pdf, pgf, png, ps, raw, rgba, svg, svgz\n",
     "start_date = dt.datetime(2019, 10, 19)\n",
     "end_date = dt.datetime(2020, 3, 25, 18, 44, 46)\n",
     "\n",
@@ -251,7 +246,7 @@
     "    sitl_data = [s for s in sitl_data if s.sroi == sroi]\n",
     "    gls_data = [s for s in gls_data if s.sroi == sroi]\n",
     "\n",
-    "sitl_mp_data = sel.filter_segments(sitl_data, '(MP|MPause|Magnetopause)')"
+    "sitl_mp_data = sel.filter_segments(sitl_data, '(MP|Magnetopause|magnetopause)', case_sensitive=True)"
    ]
   },
   {
@@ -274,7 +269,7 @@
     "    \n",
     "    for stype, data in zip(('sitl', 'abs', 'gls'), (sitl_data, abs_data, gls_data)):\n",
     "        csv_fname = (outdir\n",
-    "                     / '_'.join((stype + sroi_str,\n",
+    "                     / '_'.join((stype + '_selections' + sroi_str,\n",
     "                                 start_date.strftime('%Y%m%d%H%M%S'),\n",
     "                                 end_date.strftime('%Y%m%d%H%M%S')\n",
     "                                 )))\n",
@@ -449,7 +444,7 @@
     "               n_gls, n_sitl_mp_gls, n_abs_gls,\n",
     "               n_sitl_mp_abs_gls\n",
     "               ],\n",
-    "      set_labels=['SITL', 'ABS', 'GLS'],\n",
+    "      set_labels=['SITL-MP', 'ABS', 'GLS'],\n",
     "      alpha=0.4, ax=ax\n",
     "      )\n",
     "plt.title('Magnetopause Selections')\n",
@@ -633,84 +628,259 @@
     "for segment in abs_data:\n",
     "    df.loc[segment.taistarttime:segment.taiendtime + t_delta, 'abs'] = True\n",
     "for segment in gls_data:\n",
-    "    df.loc[segment.taistarttime:segment.taiendtime + t_delta, 'gls'] = True\n",
+    "    df.loc[segment.taistarttime:segment.taiendtime + t_delta, 'gls'] = True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Functions to calculate precision, recall, and F1 scores"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recall(true_positive, false_negative):\n",
+    "    return true_positive / (true_positive + false_negative)\n",
+    "def precision(true_positive, false_positive):\n",
+    "    return true_positive / (true_positive + false_positive)\n",
+    "def f1_score(prec, rec):\n",
+    "    return 2 * prec * rec / (prec + rec)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Claculate model performance metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# DataFrame of results\n",
+    "score_df = pd.DataFrame(columns=['true_positive', 'false_positive', 'true_negative', 'false_negative',\n",
+    "                                 'recall', 'precision', 'f1_score'],\n",
+    "                        index=['GLS_ALL', 'GLS_MP', 'ABS'])\n",
     "\n",
-    "# Confusion matrix elements\n",
-    "gls_score = {}\n",
-    "gls_score['true_positive'] = (df.sitl & df.gls).sum()\n",
-    "gls_score['false_positive'] = (~df.sitl & df.gls).sum()\n",
-    "gls_score['true_negative'] = (~df.sitl & ~df.gls).sum()\n",
-    "gls_score['false_negative'] = (df.sitl & ~df.gls).sum()\n",
-    "gls_score['recall'] = (gls_score['true_positive']\n",
-    "                       / (gls_score['true_positive'] + gls_score['false_negative'])\n",
-    "                      )\n",
-    "gls_score['precision'] = (gls_score['true_positive']\n",
-    "                          / (gls_score['true_positive'] + gls_score['false_positive'])\n",
-    "                         )\n",
-    "gls_score['f1_score'] = (2 * (gls_score['precision'] * gls_score['recall']) \n",
-    "                         / (gls_score['precision'] + gls_score['recall'])\n",
-    "                        )\n",
+    "# Confusion matrices\n",
+    "score_df['true_positive']['GLS_ALL'] = (df.sitl & df.gls).sum()\n",
+    "score_df['false_positive']['GLS_ALL'] = (~df.sitl & df.gls).sum()\n",
+    "score_df['true_negative']['GLS_ALL'] = (~df.sitl & ~df.gls).sum()\n",
+    "score_df['false_negative']['GLS_ALL'] = (df.sitl & ~df.gls).sum()\n",
     "\n",
-    "# Compare to only the MP crossings\n",
-    "gls_mp_score = {}\n",
-    "gls_mp_score['true_positive'] = (df.sitl_mp & df.gls).sum()\n",
-    "gls_mp_score['false_positive'] = (~df.sitl_mp & df.gls).sum()\n",
-    "gls_mp_score['true_negative'] = (~df.sitl_mp & ~df.gls).sum()\n",
-    "gls_mp_score['false_negative'] = (df.sitl_mp & ~df.gls).sum()\n",
-    "gls_mp_score['recall'] = (gls_mp_score['true_positive']\n",
-    "                          / (gls_mp_score['true_positive'] + gls_mp_score['false_negative'])\n",
-    "                         )\n",
-    "gls_mp_score['precision'] = (gls_mp_score['true_positive']\n",
-    "                             / (gls_mp_score['true_positive'] + gls_mp_score['false_positive'])\n",
-    "                            )\n",
-    "gls_mp_score['f1_score'] = (2 * (gls_mp_score['precision'] * gls_mp_score['recall'])\n",
-    "                            / (gls_mp_score['precision'] + gls_mp_score['recall'])\n",
-    "                           )\n",
+    "score_df['true_positive']['GLS_MP'] = (df.sitl_mp & df.gls).sum()\n",
+    "score_df['false_positive']['GLS_MP'] = (~df.sitl_mp & df.gls).sum()\n",
+    "score_df['true_negative']['GLS_MP'] = (~df.sitl_mp & ~df.gls).sum()\n",
+    "score_df['false_negative']['GLS_MP'] = (df.sitl_mp & ~df.gls).sum()\n",
     "\n",
-    "abs_score = {}\n",
-    "abs_score['true_positive'] = (df.sitl & df['abs']).sum()\n",
-    "abs_score['false_positive'] = (~df.sitl & df['abs']).sum()\n",
-    "abs_score['true_negative'] = (~df.sitl & ~df['abs']).sum()\n",
-    "abs_score['false_negative'] = (df.sitl & ~df['abs']).sum()\n",
-    "abs_score['recall'] = (abs_score['true_positive']\n",
-    "                       / (abs_score['true_positive'] + abs_score['false_negative'])\n",
-    "                      )\n",
-    "abs_score['precision'] = (abs_score['true_positive']\n",
-    "                          / (abs_score['true_positive'] + abs_score['false_positive'])\n",
-    "                         )\n",
-    "abs_score['f1_score'] = (2 * (abs_score['precision'] * abs_score['recall'])\n",
-    "                         / (abs_score['precision'] + abs_score['recall'])\n",
-    "                        )\n",
+    "score_df['true_positive']['ABS'] = (df.sitl & df['abs']).sum()\n",
+    "score_df['false_positive']['ABS'] = (~df.sitl & df['abs']).sum()\n",
+    "score_df['true_negative']['ABS'] = (~df.sitl & ~df['abs']).sum()\n",
+    "score_df['false_negative']['ABS'] = (df.sitl & ~df['abs']).sum()\n",
     "\n",
-    "# Print Results\n",
-    "print('SITL')\n",
-    "print('  # Points:       {}'.format(len(df.sitl)))\n",
-    "print('  # Selections:   {}'.format(sum(df.sitl)))\n",
-    "print('  % Selected:     {0:0.2f}%'.format(sum(df.sitl)/len(df.sitl)*100))\n",
-    "print('GLS (All):')\n",
-    "print('  True Positive:  {}'.format(gls_score['true_positive']))\n",
-    "print('  False Positive: {}'.format(gls_score['false_positive']))\n",
-    "print('  True Negative:  {}'.format(gls_score['true_negative']))\n",
-    "print('  False Negative: {}'.format(gls_score['false_negative']))\n",
-    "print('  Precision:      {0:0.4f}'.format(gls_score['precision']))\n",
-    "print('  Recall:         {0:0.4f}'.format(gls_score['recall']))\n",
-    "print('  F1 Score:       {0:0.4f}'.format(gls_score['f1_score']))\n",
-    "print('GLS (MP):')\n",
-    "print('  True Positive:  {}'.format(gls_mp_score['true_positive']))\n",
-    "print('  False Positive: {}'.format(gls_mp_score['false_positive']))\n",
-    "print('  True Negative:  {}'.format(gls_mp_score['true_negative']))\n",
-    "print('  False Negative: {}'.format(gls_mp_score['false_negative']))\n",
-    "print('  Precision:      {0:0.4f}'.format(gls_mp_score['precision']))\n",
-    "print('  Recall:         {0:0.4f}'.format(gls_mp_score['recall']))\n",
-    "print('  F1 Score:       {0:0.4f}'.format(gls_mp_score['f1_score']))\n",
-    "print('ABS:')\n",
-    "print('  True Positive:  {}'.format(abs_score['true_positive']))\n",
-    "print('  False Positive: {}'.format(abs_score['false_positive']))\n",
-    "print('  True Negative:  {}'.format(abs_score['true_negative']))\n",
-    "print('  False Negative: {}'.format(abs_score['false_negative']))\n",
-    "print('  Precision:      {0:0.4f}'.format(abs_score['precision']))\n",
-    "print('  Recall:         {0:0.4f}'.format(abs_score['recall']))\n",
-    "print('  F1 Score:       {0:0.4f}'.format(abs_score['f1_score']))"
+    "# Metrics\n",
+    "score_df['precision'] = precision(score_df['true_positive'], score_df['false_positive'])\n",
+    "score_df['recall'] = recall(score_df['true_positive'], score_df['false_negative'])\n",
+    "score_df['f1_score'] = f1_score(score_df['precision'], score_df['recall'])\n",
+    "\n",
+    "print(score_df)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write results to CSV file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "if outdir is not None:\n",
+    "    sroi_str = ''\n",
+    "    if do_sroi:\n",
+    "        sroi_str = '_sroi{0:d}'.format(sroi)\n",
+    "    filename = (outdir\n",
+    "                / '_'.join(('performance_metrics' + sroi_str,\n",
+    "                            start_date.strftime('%Y%m%d%H%M%S'),\n",
+    "                            end_date.strftime('%Y%m%d%H%M%S')\n",
+    "                            )))\n",
+    "    filename = filename.with_suffix('.csv')\n",
+    "    \n",
+    "    # Write\n",
+    "    score_df.to_csv(filename)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plot Confusion Matrix\n",
+    "This function was adapted from [Kaggle](https://www.kaggle.com/grfiv4/plot-a-confusion-matrix)."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def plot_confusion_matrix(cm,\n",
+    "                          target_names,\n",
+    "                          ax=ax,\n",
+    "                          figsize=(8,6),\n",
+    "                          cmap=None,\n",
+    "                          log=False,\n",
+    "                          normalize=True,\n",
+    "                          title='Confusion matrix'):\n",
+    "    \"\"\"\n",
+    "    Given a confusion matrix (cm), make a nice plot\n",
+    "\n",
+    "    Arguments\n",
+    "    ---------\n",
+    "    cm:           confusion matrix from sklearn.metrics.confusion_matrix\n",
+    "    \n",
+    "    ax:           Axes in which to draw the confusion matrix\n",
+    "\n",
+    "    cmap:         the gradient of the values displayed from matplotlib.pyplot.cm\n",
+    "                  see http://matplotlib.org/examples/color/colormaps_reference.html\n",
+    "                  plt.get_cmap('jet') or plt.cm.Blues\n",
+    "    \n",
+    "    log:          If True, the colorbar displays the log of the matix\n",
+    "                  If False, the colorbar is scaled linearly\n",
+    "\n",
+    "    normalize:    If False, plot the raw numbers\n",
+    "                  If True, plot the proportions\n",
+    "\n",
+    "    target_names: given classification classes such as [0, 1, 2]\n",
+    "                  the class names, for example: ['high', 'medium', 'low']\n",
+    "\n",
+    "    title:        the text to display at the top of the matrix\n",
+    "\n",
+    "    Usage\n",
+    "    -----\n",
+    "    plot_confusion_matrix(cm           = cm,                  # confusion matrix\n",
+    "                          normalize    = True,                # show proportions\n",
+    "                          target_names = y_labels_vals,       # list of names of the classes\n",
+    "                          title        = best_estimator_name) # title of graph\n",
+    "\n",
+    "    Citiation\n",
+    "    ---------\n",
+    "    http://scikit-learn.org/stable/auto_examples/model_selection/plot_confusion_matrix.html\n",
+    "\n",
+    "    \"\"\"\n",
+    "    import matplotlib.pyplot as plt\n",
+    "    import numpy as np\n",
+    "    import itertools\n",
+    "\n",
+    "    accuracy = np.trace(cm) / float(np.sum(cm))\n",
+    "    misclass = 1 - accuracy\n",
+    "\n",
+    "    if cmap is None:\n",
+    "        cmap = plt.get_cmap('Blues')\n",
+    "\n",
+    "    if ax is None:\n",
+    "        fig = plt.figure(figsize=figsize)\n",
+    "        ax = fig.add_subplot(111)\n",
+    "    \n",
+    "    if log:\n",
+    "        img = ax.imshow(np.log10(cm), interpolation='nearest', cmap=cmap)\n",
+    "    else:\n",
+    "        img = ax.imshow(cm, interpolation='nearest', cmap=cmap)\n",
+    "    ax.set_title(title)\n",
+    "    cbar = plt.colorbar(img, ax=ax, shrink=0.6)\n",
+    "    cbar.ax.set_ylabel('$\\mathrm{Log_{10}(N)}$')\n",
+    "\n",
+    "    if target_names is not None:\n",
+    "        tick_marks = np.arange(len(target_names))\n",
+    "        ax.set_xticks(tick_marks)\n",
+    "        ax.set_xticklabels(target_names, rotation=0)\n",
+    "        ax.set_yticks(tick_marks)\n",
+    "        ax.set_yticklabels(target_names, rotation=90, verticalalignment='center')\n",
+    "\n",
+    "    if normalize:\n",
+    "        cm = cm.astype('float') / cm.sum(axis=1)[:, np.newaxis]\n",
+    "\n",
+    "\n",
+    "    thresh = cm.max() / 1.5 if normalize else cm.max() / 2\n",
+    "    for i, j in itertools.product(range(cm.shape[0]), range(cm.shape[1])):\n",
+    "        if normalize:\n",
+    "            ax.text(j, i, \"{:0.4f}\".format(cm[i, j]),\n",
+    "                     horizontalalignment=\"center\",\n",
+    "                     color=\"white\" if cm[i, j] > thresh else \"black\")\n",
+    "        else:\n",
+    "            ax.text(j, i, \"{:,}\".format(cm[i, j]),\n",
+    "                     horizontalalignment=\"center\",\n",
+    "                     color=\"white\" if cm[i, j] > thresh else \"black\")\n",
+    "\n",
+    "\n",
+    "    ax.set_ylabel('True label')\n",
+    "    ax.set_xlabel('Predicted label\\naccuracy={:0.4f}; misclass={:0.4f}'.format(accuracy, misclass))\n",
+    "    \n",
+    "    plt.subplots_adjust(wspace=0.5)\n",
+    "    return ax"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Make the plots"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cm_gls_all = np.array([[score_df['true_positive']['GLS_ALL'], score_df['true_negative']['GLS_ALL']],\n",
+    "                       [score_df['false_positive']['GLS_ALL'], score_df['false_negative']['GLS_ALL']]])\n",
+    "cm_gls_mp = np.array([[score_df['true_positive']['GLS_MP'], score_df['true_negative']['GLS_MP']],\n",
+    "                      [score_df['false_positive']['GLS_MP'], score_df['false_negative']['GLS_MP']]])\n",
+    "cm_abs = np.array([[score_df['true_positive']['ABS'], score_df['true_negative']['ABS']],\n",
+    "                   [score_df['false_positive']['ABS'], score_df['false_negative']['ABS']]])\n",
+    "\n",
+    "fig, axes = plt.subplots(nrows=1, ncols=3, figsize=(8.5,2.8))\n",
+    "\n",
+    "plot_confusion_matrix(cm_gls_all, ax=axes[0], log=True, normalize=False, target_names=['Positive', 'Negative'])\n",
+    "axes[0].set_title('')\n",
+    "axes[0].set_xlabel('GLS')\n",
+    "axes[0].set_ylabel('SITL (ALL)')\n",
+    "\n",
+    "plot_confusion_matrix(cm_gls_mp, ax=axes[1], log=True, normalize=False, target_names=['Positive', 'Negative'])\n",
+    "axes[1].set_title('Point-wise Confusion Matrices')\n",
+    "axes[1].set_xlabel('GLS')\n",
+    "axes[1].set_ylabel('SITL (MP)')\n",
+    "\n",
+    "plot_confusion_matrix(cm_abs, ax=axes[2], log=True, normalize=False, target_names=['Positive', 'Negative'])\n",
+    "axes[2].set_title('')\n",
+    "axes[2].set_xlabel('ABS')\n",
+    "axes[2].set_ylabel('SITL (ALL)')\n",
+    "\n",
+    "# Save the figure\n",
+    "if outdir is not None:\n",
+    "    sroi_str = ''\n",
+    "    if do_sroi:\n",
+    "        sroi_str = '_sroi{0:d}'.format(sroi)\n",
+    "    filename = (outdir\n",
+    "                / '_'.join(('confusion_matrices' + sroi_str,\n",
+    "                            start_date.strftime('%Y%m%d%H%M%S'),\n",
+    "                            end_date.strftime('%Y%m%d%H%M%S')\n",
+    "                            )))\n",
+    "    filename = filename.with_suffix('.'+fig_type)\n",
+    "    plt.savefig(filename)"
    ]
   },
   {
