Increase resolution of plots and make background transparent; Include TP, FN, FP, TN labels in confusion matrix; populate confusion matrix with correctly ordered data.

--- a/figure3_table3.ipynb
+++ b/figure3_table3.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# MMS SITL Ground Loop: Figure 3 and Table 3\n",
-    "This notebook demonstrates, with the help of some utility functions also included in the repo, how to reproduce Figure 3 and Table 3 of **Argall, et al. (2020)**. Figure 3 consists of three separate figures that were saved as eps files then combined into a single file using Adobe Illustrator. Table 3 contains the GLS, ABS, and SITL selections within the time intervals displayed in Figure 3.\n",
+    "# MMS SITL Ground Loop: Case Studies\n",
+    "This notebook demonstrates, with the help of some utility functions also included in the repo, how to reproduce Figure 4 and Table 3 of Argall, Small, et al. (2020). Figure 4 consists of three separate figures that were saved as eps files then combined into a single file using Adobe Illustrator. Table 3 contains the SITL selections within the time intervals displayed in Figure 4.\n",
     "\n",
     "**CONTENTS**\n",
     "* [GLS, ABS, and SITL all select the magnetopause](#fig3_left)\n",
@@ -22,7 +22,7 @@
     "# Where to save files and figures. Set to None to prevent output\n",
     "import pymms\n",
     "outdir = pymms.config['gls_root'] + '/gls_paper'\n",
-    "fig_type = 'svg' # png, jpg, svg, eps, ..."
+    "fig_type = 'png' # png, jpg, svg, eps, ..."
    ]
   },
   {
@@ -178,7 +178,8 @@
     "\n",
     "# Save the figure\n",
     "if outdir is not None:\n",
-    "    plt.savefig(outdir / 'figure3_orbit-{0}_sroi-{1}.{2}'.format(orbit, sroi, fig_type))\n",
+    "    plt.savefig(outdir / 'figure3_orbit-{0}_sroi-{1}.{2}'.format(orbit, sroi, fig_type),\n",
+    "                dpi=300, transparent=True)\n",
     "plt.show()"
    ]
   },
@@ -284,7 +285,8 @@
     "\n",
     "# Save the figure\n",
     "if outdir is not None:\n",
-    "    plt.savefig(outdir / 'figure3_orbit-{0}_sroi-{1}.{2}'.format(orbit, sroi, fig_type))\n",
+    "    plt.savefig(outdir / 'figure3_orbit-{0}_sroi-{1}.{2}'.format(orbit, sroi, fig_type),\n",
+    "                dpi=300, transparent=True)\n",
     "plt.show()"
    ]
   },
@@ -387,7 +389,8 @@
     "    axes[i+4][0].set_ylim(sel_lim)\n",
     "\n",
     "if outdir is not None:\n",
-    "    plt.savefig(outdir / 'figure3_orbit-{0}_sroi-{1}.{2}'.format(orbit, sroi, fig_type))\n",
+    "    plt.savefig(outdir / 'figure3_orbit-{0}_sroi-{1}.{2}'.format(orbit, sroi, fig_type),\n",
+    "                dpi=300, transparent=True)\n",
     "plt.show()"
    ]
   },
