--- a/figure4.ipynb
+++ b/figure4.ipynb
@@ -15,6 +15,7 @@
     "* [Histogram Overlap](#histogram)\n",
     "* [Venn Diagram](#venn_diagram)\n",
     "* [Confusion Matrix, Precision, Recall, F1 Score](#f1_score)\n",
+    "* [Confusion Matrix Plot](#confusion_matrix)\n",
     "\n",
     "<a id='front_matter'></a>\n",
     "## Front matter"
@@ -54,12 +55,12 @@
    "source": [
     "sroi = 1\n",
     "outdir = pymms.config['gls_root'] + '/gls_paper' # Set to None to suppress output\n",
-    "fig_type = 'pdf' # eps, pdf, pgf, png, ps, raw, rgba, svg, svgz\n",
+    "fig_type = 'svg' # eps, pdf, pgf, png, ps, raw, rgba, svg, svgz\n",
     "start_date = dt.datetime(2019, 10, 19)\n",
     "end_date = dt.datetime(2020, 3, 25, 18, 44, 46)\n",
     "\n",
     "# Filter selections to be within a particular SROI\n",
-    "do_sroi=False\n",
+    "do_sroi=0\n",
     "if sroi in (1, 2, 3):\n",
     "    do_sroi=True\n",
     "\n",
@@ -726,6 +727,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<a id='confusion_matrix'></a>\n",
     "## Plot Confusion Matrix\n",
     "This function was adapted from [Kaggle](https://www.kaggle.com/grfiv4/plot-a-confusion-matrix)."
    ]
@@ -796,11 +798,13 @@
     "    \n",
     "    if log:\n",
     "        img = ax.imshow(np.log10(cm), interpolation='nearest', cmap=cmap)\n",
+    "        cb_title = '$\\mathrm{Log_{10}(N)}$'\n",
     "    else:\n",
     "        img = ax.imshow(cm, interpolation='nearest', cmap=cmap)\n",
+    "        cb_title = 'N'\n",
     "    ax.set_title(title)\n",
     "    cbar = plt.colorbar(img, ax=ax, shrink=0.6)\n",
-    "    cbar.ax.set_ylabel('$\\mathrm{Log_{10}(N)}$')\n",
+    "    cbar.ax.set_ylabel(cb_title)\n",
     "\n",
     "    if target_names is not None:\n",
     "        tick_marks = np.arange(len(target_names))\n",
@@ -812,17 +816,23 @@
     "    if normalize:\n",
     "        cm = cm.astype('float') / cm.sum(axis=1)[:, np.newaxis]\n",
     "\n",
+    "    if cm.shape == (2,2):\n",
+    "        bb = [['TP', 'FN'], ['FP', 'TN']]\n",
+    "    else:\n",
+    "        bb = [['', ''], ['', '']]\n",
     "\n",
     "    thresh = cm.max() / 1.5 if normalize else cm.max() / 2\n",
     "    for i, j in itertools.product(range(cm.shape[0]), range(cm.shape[1])):\n",
     "        if normalize:\n",
-    "            ax.text(j, i, \"{:0.4f}\".format(cm[i, j]),\n",
-    "                     horizontalalignment=\"center\",\n",
-    "                     color=\"white\" if cm[i, j] > thresh else \"black\")\n",
+    "            ax.text(j, i, \"{0:0.4f}\\n{1}\".format(cm[i, j], bb[i][j]),\n",
+    "                    horizontalalignment=\"center\",\n",
+    "                    verticalalignment=\"center\",\n",
+    "                    color=\"white\" if cm[i, j] > thresh else \"black\")\n",
     "        else:\n",
-    "            ax.text(j, i, \"{:,}\".format(cm[i, j]),\n",
-    "                     horizontalalignment=\"center\",\n",
-    "                     color=\"white\" if cm[i, j] > thresh else \"black\")\n",
+    "            ax.text(j, i, \"{0:,}\\n{1}\".format(cm[i, j], bb[i][j]),\n",
+    "                    horizontalalignment=\"center\",\n",
+    "                    verticalalignment=\"center\",\n",
+    "                    color=\"white\" if cm[i, j] > thresh else \"black\")\n",
     "\n",
     "\n",
     "    ax.set_ylabel('True label')\n",
@@ -845,12 +855,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "cm_gls_all = np.array([[score_df['true_positive']['GLS_ALL'], score_df['true_negative']['GLS_ALL']],\n",
-    "                       [score_df['false_positive']['GLS_ALL'], score_df['false_negative']['GLS_ALL']]])\n",
-    "cm_gls_mp = np.array([[score_df['true_positive']['GLS_MP'], score_df['true_negative']['GLS_MP']],\n",
-    "                      [score_df['false_positive']['GLS_MP'], score_df['false_negative']['GLS_MP']]])\n",
-    "cm_abs = np.array([[score_df['true_positive']['ABS'], score_df['true_negative']['ABS']],\n",
-    "                   [score_df['false_positive']['ABS'], score_df['false_negative']['ABS']]])\n",
+    "cm_gls_all = np.array([[score_df['true_positive']['GLS_ALL'], score_df['false_negative']['GLS_ALL']],\n",
+    "                       [score_df['false_positive']['GLS_ALL'], score_df['true_negative']['GLS_ALL']]])\n",
+    "cm_gls_mp = np.array([[score_df['true_positive']['GLS_MP'], score_df['false_negative']['GLS_MP']],\n",
+    "                      [score_df['false_positive']['GLS_MP'], score_df['true_negative']['GLS_MP']]])\n",
+    "cm_abs = np.array([[score_df['true_positive']['ABS'], score_df['false_negative']['ABS']],\n",
+    "                   [score_df['false_positive']['ABS'], score_df['true_negative']['ABS']]])\n",
     "\n",
     "fig, axes = plt.subplots(nrows=1, ncols=3, figsize=(8.5,2.8))\n",
     "\n",
